# robot-ai

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: Utils.cmake
commands/: commands.txt
llama-common/: CMakeLists.txt
llama-common/include/llama-common/: grammar-parser.h  llama.h  sampling.h
llama-common/src/: CMakeLists.txt  common.cpp  grammar-parser.cpp  llama.cpp  sampling.cpp  unicode-data.cpp  unicode.cpp
llama/include/llama/: common.h  llama.h  log.h  unicode-data.h  unicode.h
llama/src/: CMakeLists.txt  common.cpp  grammar-parser.cpp  llama.cpp  sampling.cpp  unicode-data.cpp  unicode.cpp
openDAQ-ai/: CMakeLists.txt
openDAQ-ai/include/openDAQ-ai/: common-ggml.h  grammar-parser.h  main.hpp  whisper_wrapper.hpp
openDAQ-ai/src/: CMakeLists.txt  common-ggml.cpp  common-sdl.cpp  common.cpp  grammar-parser.cpp  main.cpp  whisper_wrapper.cpp
robot-ai/include/robot-ai/: llama_wrapper.hpp  whisper_wrapper.hpp
robot-ai/src/: CMakeLists.txt  combined_test.cpp  llama_test.cpp  llama_wrapper.cpp  main.cpp  robot_ai.cpp  tts.cpp  whisper_test.cpp  whisper_wrapper.cpp
whisper-common/include/whisper-common/: common.h
whisper-common/src/: CMakeLists.txt  common-ggml.cpp  common-sdl.cpp  common.cpp
whisper/include/whisper/: common.h  whisper.h
whisper/src/: CMakeLists.txt  common-ggml.cpp  common-sdl.cpp  common.cpp  whisper.cpp
